--- a/package.json
+++ b/package.json
@@ -3,12 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "ramda": "^0.27.1",
+    "rc-drawer": "^4.2.2",
     "react": "^17.0.1",
+    "react-burger-menu": "^3.0.3",
     "react-dom": "^17.0.1",
+    "react-paginating": "^1.4.0",
+    "react-redux": "^7.2.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-side-bar": "^1.0.4",
+    "react-sidebar": "^3.0.2",
+    "react-sidebar-styled": "0.0.1",
+    "react-sidebar-ui": "^1.2.1",
+    "react-sidedrawer": "^0.1.0",
+    "reactrix-sidebar": "0.0.4",
+    "redux": "^4.0.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
