--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "shopping_cart",
   "version": "0.1.0",
   "private": true,
+ 
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "axios": "^0.21.1",
     "ramda": "^0.27.1",
     "rc-drawer": "^4.2.2",
     "react": "^17.0.1",
