--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "shopping_cart",
   "version": "0.1.0",
   "private": true,
- 
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
@@ -27,6 +26,7 @@
     "react-sidedrawer": "^0.1.0",
     "reactrix-sidebar": "0.0.4",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
